force-app/main/default/objects/Release_Log__c/Release_Log__c.object-meta.xml
<CustomObject>
    <description>Keeping a Release Log - branch, commit, deployment_date, deployed_files</description>
    <label>Release Log</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Release Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release_Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>