force-app/main/default/objects/Release_Log__c/fields/Commit__c.field-meta.xml
<CustomField>
    <fullName>Commit__c</fullName>
    <description>Commit</description>
    <label>Commit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>