force-app/main/default/objects/Release_Log__c/fields/Deployed_Files__c.field-meta.xml
<CustomField>
    <fullName>Deployed_Files__c</fullName>
    <description>deployed_files for current deployment</description>
    <label>Deployed_Files</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>