force-app/main/default/objects/Release_Log__c/fields/Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Date__c</fullName>
    <description>Deployment_Date</description>
    <label>Deployment Date</label>
    <type>DateTime</type>
</CustomField>